NJ-146: Fixed search field and add homebutton on mobile

--- a/app/src/stylesheets/homeButton.scss
+++ b/app/src/stylesheets/homeButton.scss
@@ -11,4 +11,10 @@
         color: whitesmoke;
         text-decoration: none;
     }
+
+    @media screen and (max-width: 760px) {
+        #home-button{
+            font-size: 110%;
+        }
+    }
 }
