--- a/app/src/stylesheets/searchBar.scss
+++ b/app/src/stylesheets/searchBar.scss
@@ -53,6 +53,7 @@ input:focus {
     position: absolute;
     top: 40px;
     align-self: center;
+    z-index: 6;
 
     .dataItem {
         display: flex;
